--- a/chatPilot/requirements.txt
+++ b/chatPilot/requirements.txt
@@ -1,5 +1,7 @@
-pip install langchain
-pip install langchain-community
-pip install langchain-openai
-pip install qdrant-client
-pip install fastembed
+Django
+langchain
+langchain-community
+langchain-openai
+qdrant-client
+fastembed
+
